# ragflow-skill-orchestrator-studio-vibe-coding

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  playwright.config.ts  test-debug.mjs
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_agent_sessions_table.py  b2c3d4e5f6a7_add_agent_configs_table.py  c3d4e5f6a7b8_add_agent_messages_table.py  d4e5f6a7b8c9_add_workflows_table.py  d750dfb7d5f0_init_tables.py  e5f6a7b8c9d0_add_workflow_runs_tables.py  f6a7b8c9d0e1_add_processed_files_deprecate_fk.py  g7b8c9d0e1f2_add_workflow_graph_data.py
backend/app/: config.py  database.py  main.py
backend/app/api/: agents.py  connections.py  dashboard.py  data_sources.py  health.py  pipeline_runs.py  pipelines.py  router.py  runs.py  skills.py  targets.py  workflow_runs.py  workflows.py
backend/app/data/: builtin_skills.py  pipeline_defaults.py  pipeline_templates.py
backend/app/models/: __init__.py  agent_config.py  agent_message.py  agent_session.py  base.py  connection.py  data_source.py  pipeline.py  processed_file.py  run.py  skill.py  target.py  workflow.py  workflow_run.py
backend/app/schemas/: agent.py  common.py  connection.py  dashboard.py  data_source.py  pipeline.py  pipeline_runs.py  run.py  skill.py  target.py  workflow.py  workflow_run.py
backend/app/services/: data_source_reader.py  data_source_tester.py  mapping_engine.py  skill_context.py  skill_runner.py  skill_seeder.py  target_index_manager.py  target_schema_discovery.py  target_tester.py  target_writer.py  temp_file_manager.py  upload_manager.py  venv_manager.py  workflow_executor.py
backend/app/services/agents/: __init__.py  base.py  context_builder.py  registry.py  session_proxy.py
backend/app/services/builtin_skills/: base.py  doc_skills.py  language_skills.py  openai_skills.py  runner.py  (+3 more)
backend/app/utils/: encryption.py  exceptions.py  pagination.py
backend/tests/: conftest.py  test_agent_base.py  test_agent_registry.py  test_agent_session_api.py  test_agent_websocket.py  test_builtin_skill_api.py  test_builtin_skill_runner.py  test_codex_adapter.py  test_connections_api.py  test_context_builder.py  test_copilot_adapter.py  test_dashboard_api.py  test_data_source_reader.py  test_data_source_tester.py  test_doc_cracker_skill.py  test_e2e_skill_flow.py  test_enrichment_tree.py  test_health.py  test_incremental_processing.py  test_mapping_engine.py  test_pipeline_runner.py  test_pipeline_runs_api.py  test_pipelines_api.py  test_runs_api.py  test_schema_integrity.py  test_skill_execution_api.py  test_skill_runner.py  test_skill_seeder.py  test_skills_api.py  test_target_index_manager.py  test_target_schema_discovery.py  test_target_tester.py  test_target_writer.py  test_temp_file_manager.py  test_upload_manager.py  test_workflow_runs.py  test_workflows_api.py
(+264 files in other folders)
