[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ragflow-studio"
version = "0.1.0"
description = "An AI Agent-driven studio for building data ingestion pipelines with intelligent orchestration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "cryptography>=42.0",
    "python-multipart>=0.0.7",
    # Azure data source SDKs (default)
    "azure-storage-blob>=12.0",
    "azure-storage-file-datalake>=12.0",
    "azure-cosmos>=4.0",
    "azure-data-tables>=12.0",
    "azure-storage-file-share>=12.0",
    "azure-storage-queue>=12.0",
    "azure-servicebus>=7.0",
    "azure-identity>=1.0",
    "pyodbc>=5.0",
    "httpx>=0.27",
    # Target SDKs (default)
    "azure-search-documents>=11.4",
    "gremlinpython>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.3",
]
aws = ["boto3>=1.28"]
dropbox = ["dropbox>=12.0"]
sftp = ["paramiko>=3.0"]
neo4j = ["neo4j>=5.0"]
mysql = ["pymysql>=1.1"]
postgresql = ["psycopg2-binary>=2.9"]
pgvector = ["psycopg2-binary>=2.9", "pgvector>=0.2"]
all-targets = ["neo4j>=5.0", "pymysql>=1.1", "psycopg2-binary>=2.9", "pgvector>=0.2"]
all = [
    "boto3>=1.28", "dropbox>=12.0", "paramiko>=3.0",
    "neo4j>=5.0", "pymysql>=1.1", "psycopg2-binary>=2.9", "pgvector>=0.2",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
